syntax = "proto3";

package api.runner.v1;

service RunnerService {
  rpc StartInstance(StartInstanceRequest) returns (StartInstanceResponse);
  rpc StopInstance(StopInstanceRequest) returns (StopInstanceResponse);
  rpc DestroyInstance(DestroyInstanceRequest) returns (DestroyInstanceResponse);
  rpc GetInstanceStatus(GetInstanceStatusRequest) returns (GetInstanceStatusResponse);
  rpc StreamInstanceLogs(StreamInstanceLogsRequest) returns (stream StreamInstanceLogsResponse);
}

message StartInstanceRequest {
  string image_tag = 1;
  string container_name = 2;
}

message StartInstanceResponse {
  string status = 1;
  string error_message = 2;
  string container_id = 3;
  ConnectionInfo connection_info = 4;
}

message ConnectionInfo {
  string host = 1;
  int32 port = 2;
}

message StopInstanceRequest {
  string container_id = 1;
}

message StopInstanceResponse {
  string status = 1;
  string error_message = 2;
}

message DestroyInstanceRequest {
  string container_id = 1;
}

message DestroyInstanceResponse {
  string status = 1;
  string error_message = 2;
}

message GetInstanceStatusRequest {
  string container_id = 1;
}

message GetInstanceStatusResponse {
  enum State {
    STATE_UNSPECIFIED = 0;
    STATE_RUNNING = 1;
    STATE_STOPPED = 2;
    STATE_DESTROYED = 3;
  }
  State state = 1;
  string error_message = 2;
}

message StreamInstanceLogsRequest {
  string container_id = 1;
}

message StreamInstanceLogsResponse {
  string log_line = 1;
}